# satteri

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CODEBASE_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/workflows/: benchmark.yml  ci.yml  deploy-website.yml  release.yml
.sampo/: README.md  fix-mdx-module-scope-shadowing.md
.sampo/changesets/: ctx-source-format.md  directive-nested-transforms.md  directive-string-ref-remap.md  expand-native-binding-targets.md  feat-child-editing-helpers.md  feat-restore-perf.md  fix-hastraw-position.md  fix-inline-math-text-content.md  fix-mdx-close-tag-in-attribute.md  fix-mdx-esm-whitespace-blank-line.md  fix-mdx-parse-error-position.md  fix-no-plugin-overhead.md  fix-node-roundtrips.md  fix-setproperty-children.md  footnote-i18n-options.md  gallant-guardian-ahti.md  grim-princess-ahti.md  grumpy-iceseeker-lemminkainen.md  heading-attributes-emit.md  heroic-lady-kullervo.md  jovial-shaman-hiisi.md  logseq-properties.md  logseq-tags.md  majestic-earl-aino.md  math-single-dollar-text-math.md  plugin-position-opt-in.md  preserve-jsx-expression-whitespace.md  roguish-bard-loviatar.md  roguish-lord-vipunen.md  somber-lady-lempo.md  steadfast-shaman-aino.md  venerable-warden-nyyrikki.md  wasi-runtime-deps.md
crates/bench/: Cargo.toml  README.md
crates/bench/benches/: pipeline.rs
crates/bench/fixtures/: document.mdx
crates/bench/src/: html_compare.rs  profile_parse.rs
crates/hast/src/: convert.rs  from_binary.rs  lib.rs  to_binary.rs
crates/mdast-arena/src/: codec.rs  commands.rs  jsx_attr_parser.rs  lib.rs  rebuild.rs
crates/mdxjs-rs/src/: configuration.rs  hast_util_to_oxc.rs  lib.rs
crates/mdxjs-rs/tests/: test.rs
crates/napi-binding/: Cargo.toml
crates/napi-binding/src/: lib.rs
crates/parser/src/: lib.rs
crates/pulldown-cmark/src/: parse.rs
crates/satteri/: CHANGELOG.md  Cargo.toml  README.md
crates/satteri-arena/: CHANGELOG.md  Cargo.toml  README.md
crates/satteri-arena/src/: arena.rs  builder.rs  lib.rs  line_index.rs  mdx_types.rs  node.rs  raw_buffer.rs
crates/satteri-ast/: CHANGELOG.md  Cargo.toml  README.md
crates/satteri-ast/src/: commands.rs  convert.rs  lib.rs  rebuild.rs  shared.rs  text_content.rs  walk.rs
crates/satteri-ast/src/hast/: codec.rs  mod.rs  node.rs  properties.rs  render.rs
crates/satteri-ast/src/mdast/: codec.rs  mod.rs  node.rs
crates/satteri-ast/tests/: arena_construction.rs  convert_positions.rs  footnote_options.rs  html.rs  line_index.rs  raw_buffer.rs  rebuild.rs  string_refs.rs  type_data.rs
crates/satteri-layout-codegen/: Cargo.toml
crates/satteri-layout-codegen/src/: emit.rs  main.rs  schema.rs
crates/satteri-mdxjs-rs/: CHANGELOG.md  Cargo.toml  readme.md  test_export_components.rs
crates/satteri-mdxjs-rs/src/: configuration.rs  hast_util_to_oxc.rs  lib.rs  mdx_plugin_recma_document.rs  mdx_plugin_recma_jsx_rewrite.rs  oxc_util_build_jsx.rs
crates/satteri-mdxjs-rs/tests/: test.rs
crates/satteri-napi-binding/: CHANGELOG.md  Cargo.toml  README.md
crates/satteri-napi-binding/src/: lib.rs
crates/satteri-plugin-api/: CHANGELOG.md  Cargo.toml  README.md
crates/satteri-plugin-api/src/: commands.rs  context.rs  data.rs  js_commands.rs  lib.rs  plugin.rs  runner.rs  typed_nodes.rs
crates/satteri-plugin-api/tests/: commands.rs  plugin_basics.rs  rebuild_integration.rs  runner.rs
crates/satteri-pulldown-cmark/: CHANGELOG.md  Cargo.toml  build.rs
crates/satteri-pulldown-cmark/specs/: container_extensions.txt  footnotes.txt  heading_attrs.txt  math.txt  math_multi_dollar.txt  metadata_blocks.txt  regression.txt  strikethrough.txt  super_sub.txt  table.txt  wikilinks.txt
crates/satteri-pulldown-cmark/src/: arena_build.rs  firstpass.rs  lib.rs  mdx.rs  parse.rs  post_passes.rs  scanners.rs
crates/satteri-pulldown-cmark/tests/: commonmark_spec_json.rs  empty_list.rs  html.rs  lib.rs  math_granular.rs  mdx.rs  mdx_math.rs  smart_punct_granular.rs  source_integrity.rs
crates/satteri-pulldown-cmark/tests/suite/: container_extensions.rs  footnotes.rs  gfm_strikethrough.rs  gfm_table.rs  gfm_tasklist.rs  heading_attrs.rs  math.rs  math_multi_dollar.rs  metadata_blocks.rs  mod.rs  regression.rs  smart_punct.rs  spec.rs  strikethrough.rs  super_sub.rs  table.rs  wikilinks.rs
crates/satteri/src/: lib.rs
crates/tryckeri-arena/: Cargo.toml
crates/tryckeri-arena/src/: arena.rs  builder.rs  codec.rs  lib.rs  line_index.rs  mdx_types.rs  node.rs  raw_buffer.rs  read_arena.rs
crates/tryckeri-hast/: Cargo.toml
crates/tryckeri-hast/src/: codec.rs  convert.rs  from_binary.rs  lib.rs  node.rs  node_types.rs  render.rs  serialize.rs  text_content.rs  to_binary.rs
crates/tryckeri-hast/tests/: binary_roundtrip.rs
crates/tryckeri-mdast/: Cargo.toml
crates/tryckeri-mdast/src/: arena.rs  codec.rs  commands.rs  lib.rs  raw_buffer.rs  rebuild.rs  walk.rs
crates/tryckeri-mdast/tests/: arena_construction.rs  line_index.rs  raw_buffer.rs  rebuild.rs  string_refs.rs  type_data.rs
crates/tryckeri-mdxjs-rs/: Cargo.toml
crates/tryckeri-mdxjs-rs/examples/: lib.rs
crates/tryckeri-mdxjs-rs/src/: hast_util_to_oxc.rs  lib.rs  mdx_plugin_recma_document.rs  mdx_plugin_recma_jsx_rewrite.rs  oxc.rs  oxc_util_build_jsx.rs  oxc_utils.rs
crates/tryckeri-mdxjs-rs/tests/: test.rs
crates/tryckeri-napi-binding/: Cargo.toml
crates/tryckeri-napi-binding/src/: lib.rs
crates/tryckeri-parser/: Cargo.toml
crates/tryckeri-parser/src/: lib.rs
crates/tryckeri-plugin-api/: Cargo.toml
crates/tryckeri-plugin-api/src/: commands.rs  context.rs  plugin.rs  runner.rs  typed_nodes.rs
crates/tryckeri-plugin-api/tests/: commands.rs  plugin_basics.rs  rebuild_integration.rs  runner.rs
playground/: index.html
playground/src/: main.ts
scripts/: copy-package-artifacts.mjs
website/: README.md  package.json
website/assets/: playground.ts
website/content/docs/: asts.md  vite.md  (+11 more)
(+4 files in other folders)
