[workspace]
resolver = "2"
members = [
  "crates/bench",
  "crates/satteri",
  "crates/satteri-arena",
  "crates/satteri-ast",
  "crates/satteri-layout-codegen",
  "crates/satteri-mdxjs-rs",
  "crates/satteri-napi-binding",
  "crates/satteri-plugin-api",
  "crates/satteri-pulldown-cmark",
]

[workspace.dependencies]
memchr = { version = "2.5", default-features = false }
oxc_allocator = "0.121.0"
oxc_ast = "0.121.0"
oxc_ast_visit = "0.121.0"
oxc_codegen = "0.121.0"
oxc_estree = "0.121.0"
oxc_parser = "0.121.0"
oxc_span = "0.121.0"
oxc_syntax = "0.121.0"
rustc-hash = "2"
satteri-arena = { path = "crates/satteri-arena", version = "0.2.2" }
# default-features = false here is what lets consumers drop the `mdx` default
# (and, for pulldown-cmark, the whole oxc stack). A per-crate
# `default-features = false` is IGNORED for `workspace = true` deps unless it is
# also declared in this table — so it must live here. Each consumer re-enables
# `mdx`/`std` through its own feature graph.
satteri-ast = { path = "crates/satteri-ast", version = "0.4.1", default-features = false }
satteri-mdxjs = { path = "crates/satteri-mdxjs-rs", version = "0.3.7" }
satteri-plugin-api = { path = "crates/satteri-plugin-api", version = "0.4.1", default-features = false }
satteri-pulldown-cmark = { path = "crates/satteri-pulldown-cmark", version = "0.5.7", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-id-start = "1"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
panic = "unwind"
