[package]
name = "satteri-bench"
version = "0.1.0"
edition = "2021"
publish = false
description = "Benchmarks and profiling harnesses for Sätteri"
license = "MIT"

[[bench]]
name = "pipeline"
harness = false

[[bin]]
name = "profile_parse"
path = "src/profile_parse.rs"

[[bin]]
name = "html_compare"
path = "src/html_compare.rs"


[dependencies]
satteri-pulldown-cmark = { workspace = true, features = ["std", "mdx"] }
satteri-ast = { workspace = true, features = ["mdx"] }
satteri-mdxjs = { workspace = true }

[dev-dependencies]
divan = { version = "4", package = "codspeed-divan-compat" }
oxc_allocator = { workspace = true }
rustc-hash = { workspace = true }
