[package]
name = "tryckeri-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mdast-arena = { path = "../mdast-arena" }
tryckeri-hast = { path = "../hast" }
mdxjs = { path = "../mdxjs-rs" }
parser = { path = "../parser" }
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
