[dependencies]
satteri-arena = { version = "0.2.0", path = "../satteri-arena" }
satteri-ast = { version = "0.2.7", path = "../satteri-ast" }
satteri-pulldown-cmark = { version = "0.4.1", path = "../satteri-pulldown-cmark" }
rustc-hash = "2"
serde = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true, features = ["serialize"] }
oxc_codegen = { workspace = true }
oxc_estree = { workspace = true, features = ["serialize"] }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
unicode-id-start = "1"

[dev-dependencies]
pretty_assertions = "1"

[features]
serializable = []

[package]
authors = ["Bruits", "Titus Wormer <tituswormer@gmail.com>"]
categories = ["compilers", "text-processing"]
description = "Compile MDX to JavaScript in Rust."
edition = "2024"
homepage = "https://github.com/bruits/satteri"
include = ["license", "src/"]
keywords = ["compile", "markdown", "mdx"]
license = "MIT"
name = "satteri-mdxjs"
repository = "https://github.com/bruits/satteri"
rust-version = "1.91.0"
version = "0.2.2"
