[package]
authors = ["Bruits", "Titus Wormer <tituswormer@gmail.com>"]
categories = ["compilers", "text-processing"]
description = "Compile MDX to JavaScript in Rust."
edition = "2024"
homepage = "https://github.com/bruits/satteri"
include = ["license", "src/"]
keywords = ["compile", "markdown", "mdx"]
license = "MIT"
name = "satteri-mdxjs"
repository = "https://github.com/bruits/satteri"
rust-version = "1.91.0"
version = "0.3.7"

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true, features = ["serialize"] }
oxc_ast_visit = { workspace = true }
oxc_codegen = { workspace = true }
oxc_estree = { workspace = true, features = ["serialize"] }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
rustc-hash = { workspace = true }
satteri-arena = { workspace = true }
satteri-ast = { workspace = true, features = ["mdx"] }
satteri-pulldown-cmark = { workspace = true, features = ["std", "mdx"] }
serde = { workspace = true }
unicode-id-start = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"

[features]
serializable = []
