[package]
name = "satteri-napi"
version = "0.2.2"
edition = "2021"
publish = false
description = "NAPI bindings exposing the Sätteri pipeline to Node.js"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
satteri-arena = { version = "0.2.0", path = "../satteri-arena" }
satteri-ast = { version = "0.2.7", path = "../satteri-ast" }
satteri-plugin-api = { version = "0.1.13", path = "../satteri-plugin-api" }
satteri-mdxjs = { version = "0.2.2", path = "../satteri-mdxjs-rs" }
satteri-pulldown-cmark = { version = "0.4.1", path = "../satteri-pulldown-cmark" }
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
