[package]
name = "satteri-napi"
version = "0.4.6"
edition = "2021"
description = "NAPI bindings exposing the Sätteri pipeline to Node.js"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
satteri-arena = { workspace = true }
satteri-ast = { workspace = true }
satteri-mdxjs = { workspace = true, optional = true }
satteri-plugin-api = { workspace = true }
satteri-pulldown-cmark = { workspace = true, features = ["std"] }

[features]
default = ["mdx"]
mdx = [
  "dep:satteri-mdxjs",
  "satteri-pulldown-cmark/mdx",
  "satteri-ast/mdx",
  "satteri-plugin-api/mdx",
]

[build-dependencies]
napi-build = "2"
