[package]
name = "satteri-plugin-api"
version = "0.4.1"
edition = "2021"
description = "Rust plugin trait, typed visitors, and runner for Sätteri"
license = "MIT"

[dependencies]
rustc-hash = { workspace = true }
satteri-arena = { workspace = true }
satteri-ast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["mdx"]
mdx = ["satteri-ast/mdx"]
