[package]
name = "satteri-pulldown-cmark"
version = "0.3.0"
authors = ["Raph Levien <raph.levien@gmail.com>", "Marcus Klaas de Vries <mail@marcusklaas.nl>", "Bruits"]
license = "MIT"
description = "A fork of the pulldown-cmark crate with MDX extensions, used in the satteri project."
edition = "2021"

build = "build.rs"

[dependencies]
bitflags = "2"
unicase = "2.6"
memchr = { version = "2.5", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
rustc-hash = "2"
satteri-arena = { version = "0.1.3", path = "../satteri-arena" }
satteri-ast = { version = "0.2.0", path = "../satteri-ast" }
unicode-id-start = "1"
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }

[features]
default = ["std"]
std = ["memchr/std"]
simd = []
gen-tests = ["std"]
