[package]
name = "satteri-pulldown-cmark"
version = "0.4.1"
authors = [
  "Raph Levien <raph.levien@gmail.com>",
  "Marcus Klaas de Vries <mail@marcusklaas.nl>",
  "Bruits"
]
license = "MIT"
description = "A fork of the pulldown-cmark crate with MDX extensions, used in the satteri project."
edition = "2021"

build = "build.rs"

[dependencies]
bitflags = "2"
memchr = { version = "2.5", default-features = false }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
rustc-hash = "2"
satteri-arena = { path = "../satteri-arena", version = "0.2.0" }
satteri-ast = { path = "../satteri-ast", version = "0.2.7" }
serde = { workspace = true, optional = true }
unicase = "2.6"
unicode-id-start = "1"

[dev-dependencies]
# NOTE: this is unmaintained, don't update to 3
bincode = { version = "2.0.1", features = ["serde"] }
serde_json = { workspace = true }

[features]
default = ["std"]
gen-tests = ["std"]
simd = []
std = ["memchr/std"]
