[package]
name = "satteri-pulldown-cmark"
version = "0.5.7"
authors = [
  "Raph Levien <raph.levien@gmail.com>",
  "Marcus Klaas de Vries <mail@marcusklaas.nl>",
  "Bruits"
]
license = "MIT"
description = "A fork of the pulldown-cmark crate with MDX extensions, used in the satteri project."
edition = "2021"

build = "build.rs"

[dependencies]
bitflags = "2"
memchr = { version = "2.5", default-features = false }
oxc_allocator = { workspace = true, optional = true }
oxc_ast = { workspace = true, optional = true }
oxc_ast_visit = { workspace = true, optional = true }
oxc_parser = { workspace = true, optional = true }
oxc_span = { workspace = true, optional = true }
rustc-hash = { workspace = true }
satteri-arena = { workspace = true }
satteri-ast = { workspace = true }
serde = { workspace = true, optional = true }
unicase = "2.6"
unicode-id-start = { workspace = true }

[dev-dependencies]
# NOTE: this is unmaintained, don't update to 3
bincode = { version = "2.0.1", features = ["serde"] }
serde_json = { workspace = true }

[features]
default = ["std", "mdx"]
gen-tests = ["std"]
mdx = [
  "dep:oxc_allocator",
  "dep:oxc_ast",
  "dep:oxc_ast_visit",
  "dep:oxc_parser",
  "dep:oxc_span",
  "satteri-ast/mdx",
]
simd = []
std = ["memchr/std"]
