[package]
name = "satteri"
version = "0.1.15"
edition = "2021"
description = "High-level Rust API for the Sätteri markdown/MDX pipeline"
license = "MIT"

[dependencies]
satteri-ast = { version = "0.2.5", path = "../satteri-ast" }
satteri-mdxjs = { version = "0.1.15", path = "../satteri-mdxjs-rs" }
satteri-pulldown-cmark = { version = "0.3.5", path = "../satteri-pulldown-cmark" }
