[package]
name = "satteri"
version = "0.2.7"
edition = "2021"
description = "High-level Rust API for the Sätteri markdown/MDX pipeline"
license = "MIT"

[dependencies]
satteri-ast = { workspace = true }
satteri-mdxjs = { workspace = true, optional = true }
satteri-pulldown-cmark = { workspace = true, features = ["std"] }

[features]
default = ["mdx"]
mdx = ["dep:satteri-mdxjs", "satteri-pulldown-cmark/mdx", "satteri-ast/mdx"]
