[package]
name = "tryckeri-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
tryckeri-arena = { path = "../tryckeri-arena" }
tryckeri-mdast = { path = "../tryckeri-mdast" }
tryckeri-pulldown-cmark = { path = "../tryckeri-pulldown-cmark" }

[dev-dependencies]
tryckeri-hast = { path = "../tryckeri-hast" }
